❕⁉️ Updated with Glitch

--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
       /* Styling Only Related To THIS Page */
       .parent-flex {
         display: flex;
-        background-color: purple;
+        background-color: pink;
         justify-content: space-around;
         padding: 10px;
         margin-bottom: 20px;
@@ -18,6 +18,9 @@
         max-width: 30%;
         border-radius: 10px;
       }
+      h1 {
+        font-family: bubble;
+      }
     </style>
   </head>
   <body>
@@ -25,8 +28,8 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="aboutme.html">About Me</a></li>
-      <li><a class="active" href="art.html">Art</a></li>
-      <li><a href="resume.html">Resume</a></li>
+      <li><a class="active" href="music.html">Music</a></li>
+      <li><a href="Other.html">Other</a></li>
       <li style="float: right">
         <a target="_blank" href=""
           ><img
@@ -43,23 +46,23 @@
       </li>
     </ul>
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
-    <h1>My Art</h1>
+    <h1>My Performances</h1>
 
     <div class="parent-flex">
       <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
+        src="https://cdn.glitch.global/f5cfd84d-2c71-476a-95e1-963277195f39/Screenshot%202025-06-04%2011.36.06%20AM.png?v=1749051556470"
       />
       <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/IMG_3767.png?v=1746635392409"
+        src="https://cdn.glitch.global/f5cfd84d-2c71-476a-95e1-963277195f39/WE7A3517.JPG?v=1749052201360"
       />
     </div>
 
     <div class="parent-flex">
       <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
+        src="https://cdn.glitch.global/f5cfd84d-2c71-476a-95e1-963277195f39/Screenshot%202025-06-06%2011.31.25%20AM.png?v=1749223915151"
       />
       <img
-        src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/IMG_3767.png?v=1746635392409"
+        src="https://cdn.glitch.global/f5cfd84d-2c71-476a-95e1-963277195f39/WE7A3507.JPG?v=1749224245956"
       />
     </div>
   </body>
