--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
       /* Styling Only Related To THIS Page */
       .parent-flex {
         display: flex;
-        background-color: purple;
+        background-color: #d5e5d5;
         align-items: center;
         justify-content: space-around;
         margin-bottom: 50px;
@@ -19,9 +19,12 @@
         padding: 20px;
       }
       .child-flex p {
-        background-color: pink;
+        background-color: #adb2d4;
         padding: 20px;
         margin: 20px;
+      }
+      h1 {
+        font-family: bubble;
       }
     </style>
   </head>
@@ -30,8 +33,8 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a class="active" href="aboutme.html">About Me</a></li>
-      <li><a href="art.html">Art</a></li>
-      <li><a href="resume.html">Resume</a></li>
+      <li><a href="music.html">Music</a></li>
+      <li><a href="other.html">Other</a></li>
       <li style="float: right">
         <a target="_blank" href=""
           ><img
@@ -39,6 +42,7 @@
             style="width: 25px; margin: -5px"
         /></a>
       </li>
+      
       <li style="float: right">
         <a target="_blank" href=""
           ><img
@@ -53,36 +57,26 @@
     <div class="parent-flex">
       <div class="child-flex">
         <img
-          src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
+          src="https://cdn.glitch.global/f5cfd84d-2c71-476a-95e1-963277195f39/IMG_6399.jpg?v=1748964298654"
+          style="width: 200px; length: 400px; margin: -5px"
         />
       </div>
       <div class="child-flex">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
-        </p>
+          I love to travel with my family, as you can see in this photo. I go to Greece every summer to visit my grandparents and family. I am bilingual (English and Greek) and hope to become trilingual when I learn Spanish fluently. My favorite places I have travelled to are Japan and Switzerland. 
+      </p>
       </div>
     </div>
     <div class="parent-flex">
       <div class="child-flex">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+          I have a miniature schnauzer named Phoebe. She is 10 years old and smells like fritos. She has been on the verge of death countless times from choking on worms in the backyard. 
         </p>
       </div>
       <div class="child-flex">
         <img
-          src="https://cdn.glitch.global/0c264bf4-23f0-42f0-ac26-96d6871eec31/Untitled100.png?v=1746635377571"
+          src="https://cdn.glitch.global/f5cfd84d-2c71-476a-95e1-963277195f39/IMG_2475.JPG?v=1748964750585"
+             style="width: 200px; length: 400px; margin: -5px"
         />
       </div>
     </div>
