--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Requirements
 
 Select ONE Additional Feature to Add  
 [ no ] Feature 1 - Google Font
-[ no ] Feature 2 - Upload a Font
+[ yes ] Feature 2 - Upload a Font
 [ no ] Feature 3 - Include jQuery
 [ no ] Feature 4 - Embed Code from Spotify/Google Docs/YouTube
 [ no ] Feature 5 - Customized HTML Page #5
@@ -25,7 +25,7 @@ Select ONE Additional Feature to Add
       https://www.w3schools.com/howto/howto_css_parallax.asp*/
       .parallax {
         /* The image used */
-        background-image: url("https://cdn.glitch.global/66249578-345e-4e9c-8fac-cabe98f682e4/image0.jpeg?v=1747657278943");
+        background-image: url("https://images.pexels.com/photos/159420/piano-instrument-music-keys-159420.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
 
         /* Set a specific height */
         min-height: 500px;
@@ -38,23 +38,28 @@ Select ONE Additional Feature to Add
       }
       .textblock {
         min-height: 500px;
-        background-color: black;
+        background-color: #d9adcf;
         color: white;
       }
       .parent-flex {
         display: flex;
       }
       .child-flex {
-        background-color: green;
+        background-color: #152b4d;
         margin: 30px;
         padding: 10px;
         text-align: justify;
         width: 40%;
       }
+      
       .para-1{
         display: flex;
         align-items: center;
       }
+      h1{
+        font-family:bubble;
+      }
+     
     </style>
   </head>
   <body>
@@ -62,8 +67,8 @@ Select ONE Additional Feature to Add
     <ul class="nav">
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="aboutme.html">About Me</a></li>
-      <li><a href="art.html">Art</a></li>
-      <li><a href="resume.html">Resume</a></li>
+      <li><a href="music.html">Music</a></li>
+      <li><a href="Other.html">Other</a></li>
       <li style="float: right">
         <a target="_blank" href=""
           ><img
@@ -81,30 +86,19 @@ Select ONE Additional Feature to Add
     </ul>
 
     <!-- ⬇⬇⬇⬇⬇⬇ Main Page Content -->
-    <h1>Ms. Hall | Web Dev 2024-2025</h1>
+    <h1> Evyenia Zaharopoulos | Personal Website</h1>
     <div class="parallax"></div>
 
     <div class="textblock parent-flex">
       <div class="child-flex para-1">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+          Evyenia Zaharopoulos is a 16-year-old high school student living in Queens, New York. She currently attends Fiorello H. LaGuardia High School of Music and Art and Performing Arts, where she is pursuing her passion for the arts with a concentration in instrumental music. Evyenia hopes to become a lawyer while continuing her involvement in the arts.  She strives to expand her impact as a young voice in both creative and academic spaces. She draws inspiration from her Greek heritage, her family’s support, and the vibrant neighborhood she calls home.
+
         </p>
       </div>
       <div class="child-flex">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque
-          faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi
-          pretium tellus duis convallis. Tempus leo eu aenean sed diam urna
-          tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas.
-          Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut
-          hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent
-          per conubia nostra inceptos himenaeos.
+          Η Ευγενία Ζαχαροπούλου είναι μια 16χρονη μαθήτρια λυκείου που ζει στο Κουίνς της Νέας Υόρκης. Αυτήν τη στιγμή φοιτά στο High School of Music and Art and Performing Arts Fiorello H. LaGuardia, όπου επιδιώκει το πάθος της για τις τέχνες με συγκέντρωση στην οργανική μουσική. Η Ευγενία ελπίζει να γίνει δικηγόρος συνεχίζοντας την ενασχόλησή της με τις τέχνες. Προσπαθεί να επεκτείνει την απήχησή της ως νεανική φωνή τόσο σε δημιουργικούς όσο και σε ακαδημαϊκούς χώρους. Αντλεί έμπνευση από την ελληνική της κληρονομιά, την υποστήριξη της οικογένειάς της και τη ζωντανή γειτονιά που αποκαλεί σπίτι της.
         </p>
       </div>
     </div>
